docgen/vcl.github.io/styles.scss
@use "~normalize.css/normalize.css";
@use "theme" with (
  $app-area-max-width: 100%
);
@use "adv-text-structure";
@use "app";
@use "list";
@use "button";
@use "container";
@use "data-list";
@use "icon";
@use "icogram";
@use "input";
@use "flex-grid";
@use "grid";
@use "navigation";
@use "notification";
@use "scrollbar";
@use "tab-nav";
@use "table";
@use "toolbar";
@use "typography";
@use "utils";

@use "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
@use "~@fortawesome/fontawesome-free/scss/brands.scss" with (
  $fa-font-path: "~@fortawesome/fontawesome-free/webfonts"
);
@use "~@fortawesome/fontawesome-free/scss/solid.scss" with (
  $fa-font-path: "~@fortawesome/fontawesome-free/webfonts"
);

html,
.viewport,
.app {
  min-height: 100%;
  height: 100%;
  margin: 0;
}

header {
  margin-top: 0;
  padding: 1em;
  position: relative;
}

.content-area {
  overflow: hidden;
}

.docMetadata {
  margin-bottom: 1em;
  min-width: 20em;

  & .grid-span-gca,
  & .grid-span-gcb {
    text-overflow: ellipsis;
    overflow: hidden;
  }
}

.docQuicklinks {
  position: absolute;
  right: 25px;
  top: 25px;
}

.docWelcome {
  margin: 3em;
}

.docDemo {
  margin-top: 15px;
  margin-bottom: 40px;
}

.docDemoContent {
  padding: 10px;
  padding-top: 20px;
  padding-bottom: 20px;
  border-top: 0;
  margin: 0;
  overflow: auto;
  position: relative;
  transform: translateZ(0);
}

.docContent {
  padding-right: 15px;
  padding-left: 15px;
}

.docPart {
  margin-bottom: 20px;
}

.docNav {
  height: 100%;
  padding-top: 10px;
  padding-right: 15px;
  padding-left: 0;
  padding-bottom: 0;
  margin-bottom: 0;
  min-width: 15em;
}

.docMetadata {
  padding-top: 10px;
  margin-left: 1.5em;
}

.docNavHeading a {
  font-weight: bold !important;
}

.docNavItem > .icogram {
  padding-left: 4.5em !important;
}

.docEditDemoButton {
  float: right;
}

code.hljs {
  white-space: inherit;
}

